hopefully fixed invisible text bug

--- a/src/index.css
+++ b/src/index.css
@@ -264,12 +264,12 @@ a, a:visited {
 
 #bio-content {
   animation:
-    2s ease-out 0s 1 slideInFromDown,
+    2s ease-out 0s 1 slideInFromDown forwards,
     2s ease-out 0s 1 fadeIn forwards;
   height: 50%;
   display: flex;
   padding: 0 20px;
-  opacity: 0;
+  opacity: 1;
 }
 
 
